//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table user {
  id Int [pk, increment]
  email String [unique, not null]
  firstName String [not null]
  middleAndSurname String [not null]
  age Int
  password String [not null]
  createdAt DateTime [default: `now()`, not null]
  unregisteredAt DateTime
  referredByUserId Int
}

Table anon_friend {
  id Int [pk, increment]
  userId Int [not null]
  fullName String [not null]
}

Table boardgame {
  id Int [pk, increment]
  bggId Int [unique, not null]
  title String [not null]
  year Int
  imageUrl String
}

Table match {
  id Int [pk, increment]
  boardgameId Int [not null]
  startedAt DateTime [not null]
  endedAt DateTime
  location String
  notes String
  createdAt DateTime [default: `now()`, not null]
  deletedAt DateTime
  authorId Int
}

Table player {
  id Int [pk, increment]
  score Int
  isWinner Boolean
  matchId Int [not null]
  userId Int
  anonFriendId Int
}

Table friendship_request {
  requestingUserId Int [not null]
  requestedUserId Int [not null]

  indexes {
    (requestingUserId, requestedUserId) [pk]
  }
}

Table friendship {
  smallerUserId Int [not null]
  biggerUserId Int [not null]

  indexes {
    (smallerUserId, biggerUserId) [pk]
  }
}

Ref: user.referredByUserId > user.id

Ref: anon_friend.userId > user.id [delete: Cascade]

Ref: match.boardgameId > boardgame.id

Ref: match.authorId > user.id [delete: Set Null]

Ref: player.matchId > match.id [delete: Cascade]

Ref: player.userId > user.id [delete: Set Null]

Ref: player.anonFriendId > anon_friend.id [delete: Set Null]

Ref: friendship_request.requestingUserId > user.id [delete: Cascade]

Ref: friendship_request.requestedUserId > user.id [delete: Cascade]

Ref: friendship.smallerUserId > user.id [delete: Cascade]

Ref: friendship.biggerUserId > user.id [delete: Cascade]